# baselhack_2025_the_loop

code/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
code/backend/app/: __main__.py  database.py  llm.py  logging.py  main.py  models.py  settings.py  types.py
code/backend/app/consensus/: category_selection.py  dimension_extraction.py  summary.py  summary_helpers.py  types.py
code/backend/app/database/: session.py
code/backend/app/database/models/: discussion.py
code/backend/app/models/: discussion.py
code/backend/app/routers/: discussion.py  discussions.py  messages.py  reports.py
code/backend/notebooks/: langchain.ipynb  populate_test_data.ipynb
code/nextjs-frontend/: Dockerfile  package-lock.json  package.json
code/nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
code/nextjs-frontend/app/discussion/[slug]/: page.tsx
code/nextjs-frontend/app/discussions/: DiscussionsService.ts  MessagesService.ts  page.tsx
code/nextjs-frontend/app/discussions/[disuccionId]/: page.tsx
code/nextjs-frontend/app/home/: page.tsx
code/nextjs-frontend/app/services/: DiscussionsService.ts  MessagesService.ts  ResultsService.ts
code/nextjs-frontend/components/: DiscussionCard.tsx  GlobalNavbar.tsx  Header.tsx  TagsInput.tsx  TemplateCard.tsx
code/nextjs-frontend/components/dashboard/: ActivityOverTime.tsx  EngagementSnapshot.tsx  ImpactScore.tsx  ProgressBarItem.tsx  TopEmotions.tsx  TopOpinionCategories.tsx  TopSentiment.tsx
code/nextjs-frontend/components/ui/: textarea.tsx
code/nextjs-frontend/lib/: dashboardConstants.ts  dashboardData.ts  utils.ts
code/nextjs-frontend/types/: qrcode.d.ts
code/presentation-threejs/: README.md  index.html  package-lock.json  package.json  vite.config.ts
code/presentation-threejs/src/: PresentationController.ts  main.ts  slides.ts  types.ts
(+3 files in other folders)
